--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "@pothos/core": "^4.3.0",
     "@pothos/plugin-prisma": "^4.4.0",
     "@pothos/plugin-relay": "^4.3.0",
+    "@pothos/plugin-scope-auth": "^4.1.1",
     "@prisma/client": "^6.0.1",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
