--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.10",
+    "@apollo/client": "3.11.10",
     "@apollo/server": "^4.11.2",
     "@as-integrations/next": "^3.2.0",
     "@pothos/core": "^4.3.0",
@@ -20,19 +20,34 @@
     "@pothos/plugin-relay": "^4.3.0",
     "@pothos/plugin-scope-auth": "^4.1.1",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
     "graphql-tag": "^2.12.6",
+    "graphql-upload": "15.0.2",
+    "graphql-upload-ts": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.471.1",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/graphql-upload": "16.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
