--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.5",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
     "graphql-tag": "^2.12.6",
