--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "@pothos/plugin-relay": "^4.3.0",
     "@pothos/plugin-scope-auth": "^4.1.1",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "4",
+    "@tanstack/react-table": "^8.20.6",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.0.5",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
